--- a/data/glade/UpdateManager.glade
+++ b/data/glade/UpdateManager.glade
@@ -1371,11 +1371,34 @@ Your system does not check for updates automatically. You can configure this beh
       <property name="spacing">12</property>
 
       <child>
+	<widget class="GtkLabel" id="label_cache_progress_title">
+	  <property name="visible">True</property>
+	  <property name="label" translatable="yes">&lt;big&gt;&lt;b&gt;Starting update manager&lt;/b&gt;&lt;/big&gt;</property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">True</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0</property>
+	  <property name="yalign">0</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	  <property name="width_chars">-1</property>
+	  <property name="single_line_mode">False</property>
+	  <property name="angle">0</property>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
+	</packing>
+      </child>
+
+      <child>
 	<widget class="GtkLabel" id="label22">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">&lt;big&gt;&lt;b&gt;Starting update manager&lt;/b&gt;&lt;/big&gt;
-
-Software updates correct errors, eliminate security vulnerabilities and provide new features.</property>
+	  <property name="label" translatable="yes">Software updates correct errors, eliminate security vulnerabilities and provide new features.</property>
 	  <property name="use_underline">False</property>
 	  <property name="use_markup">True</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
