Add dummy console support

--- a/DistUpgrade/window_main.ui
+++ b/DistUpgrade/window_main.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>268</width>
-            <height>256</height>
+            <width>420</width>
+            <height>263</height>
         </rect>
     </property>
     <property name="caption">
@@ -39,6 +39,14 @@
                     <property name="name">
                         <cstring>image_step4</cstring>
                     </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>4</hsizetype>
+                            <vsizetype>5</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
                     <property name="text">
                         <string>.</string>
                     </property>
@@ -54,6 +62,14 @@
                 <widget class="QLabel" row="2" column="0">
                     <property name="name">
                         <cstring>image_step3</cstring>
+                    </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>4</hsizetype>
+                            <vsizetype>5</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
                     </property>
                     <property name="text">
                         <string>.</string>
@@ -71,6 +87,14 @@
                     <property name="name">
                         <cstring>image_step5</cstring>
                     </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>4</hsizetype>
+                            <vsizetype>5</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
                     <property name="text">
                         <string>.</string>
                     </property>
@@ -78,6 +102,14 @@
                 <widget class="QLabel" row="1" column="0">
                     <property name="name">
                         <cstring>image_step2</cstring>
+                    </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>4</hsizetype>
+                            <vsizetype>5</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
                     </property>
                     <property name="text">
                         <string>.</string>
@@ -103,6 +135,14 @@
                     <property name="name">
                         <cstring>image_step1</cstring>
                     </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>4</hsizetype>
+                            <vsizetype>5</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
                     <property name="text">
                         <string>.</string>
                     </property>
@@ -117,7 +157,7 @@
                 <string>Show Terminal &gt;&gt;&gt;</string>
             </property>
         </widget>
-        <spacer row="6" column="1" rowspan="1" colspan="2">
+        <spacer row="6" column="1">
             <property name="name">
                 <cstring>spacer1</cstring>
             </property>
@@ -134,24 +174,7 @@
                 </size>
             </property>
         </spacer>
-        <spacer row="1" column="2">
-            <property name="name">
-                <cstring>spacer2</cstring>
-            </property>
-            <property name="orientation">
-                <enum>Horizontal</enum>
-            </property>
-            <property name="sizeType">
-                <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>70</width>
-                    <height>21</height>
-                </size>
-            </property>
-        </spacer>
-        <widget class="QLabel" row="0" column="0" rowspan="1" colspan="3">
+        <widget class="QLabel" row="0" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>label_title</cstring>
             </property>
@@ -176,7 +199,7 @@
                 </size>
             </property>
         </spacer>
-        <widget class="QLabel" row="4" column="0" rowspan="1" colspan="3">
+        <widget class="QLabel" row="4" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>label_status</cstring>
             </property>
@@ -184,7 +207,7 @@
                 <string></string>
             </property>
         </widget>
-        <widget class="QLabel" row="2" column="0" rowspan="1" colspan="3">
+        <widget class="QLabel" row="2" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>progress_text</cstring>
             </property>
@@ -192,9 +215,20 @@
                 <string></string>
             </property>
         </widget>
-        <widget class="QProgressBar" row="3" column="0" rowspan="1" colspan="3">
+        <widget class="QProgressBar" row="3" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>progressbar_cache</cstring>
+            </property>
+        </widget>
+        <widget class="QFrame" row="7" column="0" rowspan="1" colspan="2">
+            <property name="name">
+                <cstring>konsole_frame</cstring>
+            </property>
+            <property name="frameShape">
+                <enum>StyledPanel</enum>
+            </property>
+            <property name="frameShadow">
+                <enum>Raised</enum>
             </property>
         </widget>
     </grid>
