Tidy up code and order methods the same as in gtk view

--- a/DistUpgrade/dialog_error.ui
+++ b/DistUpgrade/dialog_error.ui
@@ -54,7 +54,7 @@
         </widget>
         <widget class="QLabel" row="0" column="0">
             <property name="name">
-                <cstring>textLabel10</cstring>
+                <cstring>image</cstring>
             </property>
             <property name="sizePolicy">
                 <sizepolicy>
