--- a/DistUpgrade/dialog_changes.ui
+++ b/DistUpgrade/dialog_changes.ui
@@ -9,6 +9,12 @@
     <height>417</height>
    </rect>
   </property>
+  <property name="sizePolicy" >
+   <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle" >
    <string>Package Changes</string>
   </property>
@@ -84,6 +90,12 @@
        </item>
        <item>
         <widget class="QLabel" name="label_changes" >
+         <property name="sizePolicy" >
+          <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="text" >
           <string/>
          </property>
@@ -150,6 +162,9 @@
    </item>
    <item row="2" column="0" colspan="4" >
     <widget class="QTreeWidget" name="treeview_details" >
+     <property name="rootIsDecorated" >
+      <bool>false</bool>
+     </property>
      <column>
       <property name="text" >
        <string>1</string>
