--- a/DistUpgrade/dialog_error.ui
+++ b/DistUpgrade/dialog_error.ui
@@ -1,129 +1,109 @@
 <ui version="4.0" >
- <class>CrashDialog</class>
- <widget class="QDialog" name="CrashDialog" >
+ <class>dialog_error</class>
+ <widget class="QDialog" name="dialog_error" >
   <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>483</width>
-    <height>483</height>
+    <width>427</width>
+    <height>343</height>
    </rect>
   </property>
-  <property name="sizePolicy" >
-   <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
   <property name="windowTitle" >
-   <string>Upgrader Crashed</string>
-  </property>
-  <property name="sizeGripEnabled" >
-   <bool>false</bool>
+   <string>Error</string>
   </property>
   <property name="modal" >
    <bool>true</bool>
   </property>
   <layout class="QGridLayout" >
+   <item row="1" column="0" >
+    <spacer name="spacer4" >
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType" >
+      <enum>QSizePolicy::Expanding</enum>
+     </property>
+     <property name="sizeHint" stdset="0" >
+      <size>
+       <width>21</width>
+       <height>161</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="3" column="3" >
+    <widget class="QPushButton" name="button_close" >
+     <property name="text" >
+      <string>Close</string>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0" >
-    <layout class="QVBoxLayout" >
-     <item>
-      <widget class="QLabel" name="crash_heading_label" >
-       <property name="sizePolicy" >
-        <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text" >
-        <string>&lt;h2>Upgrade Tool Crashed&lt;/h2></string>
-       </property>
-       <property name="alignment" >
-        <set>Qt::AlignVCenter</set>
-       </property>
-       <property name="wordWrap" >
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="Line" name="line12" >
-       <property name="frameShape" >
-        <enum>QFrame::HLine</enum>
-       </property>
-       <property name="frameShadow" >
-        <enum>QFrame::Sunken</enum>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="textLabel1" >
-       <property name="text" >
-        <string>&lt;qt>We're sorry; the upgrade tool crashed. Please file a new bug report at &lt;a href="http://launchpad.net/ubuntu/+source/update-manager">http://launchpad.net/ubuntu/+source/update-manager&lt;/a> (do not attach your details to any existing bug) and a developer will attend to the problem as soon as possible. To help the developers understand what went wrong, include the following detail in your bug report, and attach the files /var/log/dist-upgrade/apt.log and /var/log/dist-upgrade/main.log:</string>
-       </property>
-       <property name="alignment" >
-        <set>Qt::AlignVCenter</set>
-       </property>
-       <property name="wordWrap" >
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QTextEdit" name="crash_detail" />
-     </item>
-     <item>
-      <layout class="QHBoxLayout" >
-       <item>
-        <spacer name="Horizontal Spacing2" >
-         <property name="orientation" >
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeType" >
-          <enum>QSizePolicy::MinimumExpanding</enum>
-         </property>
-         <property name="sizeHint" stdset="0" >
-          <size>
-           <width>20</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QPushButton" name="crash_close" >
-         <property name="text" >
-          <string>&amp;Close</string>
-         </property>
-         <property name="shortcut" >
-          <string>Alt+C</string>
-         </property>
-         <property name="autoDefault" >
-          <bool>true</bool>
-         </property>
-         <property name="default" >
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-    </layout>
+    <widget class="QLabel" name="image" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Preferred" hsizetype="Fixed" >
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string/>
+     </property>
+     <property name="pixmap" >
+      <pixmap>image0</pixmap>
+     </property>
+     <property name="wordWrap" >
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" colspan="3" >
+    <widget class="QLabel" name="label_error" >
+     <property name="text" >
+      <string/>
+     </property>
+     <property name="wordWrap" >
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2" >
+    <spacer name="spacer5" >
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeType" >
+      <enum>QSizePolicy::Expanding</enum>
+     </property>
+     <property name="sizeHint" stdset="0" >
+      <size>
+       <width>130</width>
+       <height>21</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="3" column="2" >
+    <widget class="QPushButton" name="button_bugreport" >
+     <property name="text" >
+      <string>Report Bug</string>
+     </property>
+    </widget>
+   </item>
+   <item rowspan="2" row="1" column="1" colspan="3" >
+    <widget class="QTextEdit" name="textview_error" />
    </item>
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
- <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
- <includes>
-  <include location="local" >kurllabel.h</include>
- </includes>
  <resources/>
  <connections>
   <connection>
-   <sender>crash_close</sender>
+   <sender>button_close</sender>
    <signal>clicked()</signal>
-   <receiver>CrashDialog</receiver>
-   <slot>accept()</slot>
+   <receiver>dialog_error</receiver>
+   <slot>close()</slot>
    <hints>
     <hint type="sourcelabel" >
      <x>20</x>
