openURL() and reportBug()

--- a/DistUpgrade/crashdialog.ui
+++ b/DistUpgrade/crashdialog.ui
@@ -57,7 +57,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="textLabel1" >
+      <widget class="QLabel" name="crash_info_text" >
        <property name="text" >
         <string>&lt;qt>We're sorry; the upgrade tool crashed. Please file a new bug report at &lt;a href="http://launchpad.net/ubuntu/+source/update-manager">http://launchpad.net/ubuntu/+source/update-manager&lt;/a> (do not attach your details to any existing bug) and a developer will attend to the problem as soon as possible. To help the developers understand what went wrong, include the following detail in your bug report, and attach the files /var/log/dist-upgrade/apt.log and /var/log/dist-upgrade/main.log:</string>
        </property>
@@ -67,10 +67,13 @@
        <property name="wordWrap" >
         <bool>true</bool>
        </property>
+       <property name="openExternalLinks" >
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
-      <widget class="QTextEdit" name="crash_detail" />
+      <widget class="QTextBrowser" name="crash_detail" />
      </item>
      <item>
       <layout class="QHBoxLayout" >
